--- a/assets/projects.css
+++ b/assets/projects.css
@@ -705,6 +705,7 @@ body:not(.home-page) header.fixed.top-0.z-50 {
   margin: 0;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
